# langlearn-types

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.beads/: .gitignore  issues.jsonl
.claude/: settings.json
.github/workflows/: lint.yml  release.yml  test.yml
src/langlearn_types/: __init__.py  __main__.py  cli.py  models.py  protocols.py  server.py
tests/: test_smoke.py
