[project]
name = "punt-langlearn-types"
version = "0.1.0"
description = "Shared interfaces and data models for LangLearn tooling."
readme = "README.md"
authors = [{ name = "JF", email = "jmf@pobox.com" }]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/punt-labs/langlearn-types"
Repository = "https://github.com/punt-labs/langlearn-types"
"Bug Tracker" = "https://github.com/punt-labs/langlearn-types/issues"

[project.scripts]
langlearn-types = "langlearn_types.cli:app"
langlearn-types-server = "langlearn_types.server:run_server"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pyright>=1.1.390",
    "ruff>=0.9.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "langlearn_types"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "TCH",
    "TID",
    "RUF",
]
ignore = [
    "TC001",
    "TC003",
]

[tool.ruff.lint.isort]
known-first-party = ["langlearn_types"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires provider API credentials)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[[tool.mypy.overrides]]
module = ["typer.*", "mcp.*"]
ignore_missing_imports = true

